@@ -1,4 +1,4 @@
-package com.luckyseven.user.config;
+package com.luckyseven.funding.config;
 
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
@@ -56,20 +56,20 @@ public class SecurityConfig {
                                 CorsConfiguration configuration = new CorsConfiguration();
                                 configuration.setAllowedOrigins(
                                         List.of(
-                                                "http://localhost:8080",
                                                 "http://localhost:5000",
                                                 "https://chuka.kr",
-                                                "http://k10c107.p.ssafy.io:8080",
+                                                "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8081",
                                                 "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8082",
                                                 "http://k10c107.p.ssafy.io:8083",
-                                                "http://k10c107.p.ssafy.io:8084"
+                                                "http://k10c107.p.ssafy.io:8085"
                                         )
                                 );
                                 configuration.setAllowedMethods(Collections.singletonList("*"));
                                 configuration.setAllowCredentials(true);
                                 configuration.setAllowedHeaders(Collections.singletonList("*"));
                                 configuration.setMaxAge(3600L);
-                                configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization", "Refresh-Token"));
+                                configuration.setExposedHeaders(Collections.singletonList("Set-Cookie"));
+                                configuration.setExposedHeaders(Collections.singletonList("Authorization"));
 
                                 return configuration;
 
@@ -87,7 +87,7 @@ public class SecurityConfig {
         http
                 .authorizeHttpRequests((auth) -> auth
                         .requestMatchers("/", "/swagger-resources/**", "/v3/api-docs/**").permitAll()
-                        .requestMatchers("/api/v1/users/**", "/api/v1/auth/**", "/api/v1/test").permitAll()
+                        .requestMatchers("/api/v1/fundings/**").permitAll()
                         .requestMatchers( "/swagger-ui/**").hasRole("ADMIN")
                         .anyRequest().authenticated());
 
@@ -107,8 +107,6 @@ public class SecurityConfig {
                 .roles("ADMIN")
                 .build();
 
-
         return new InMemoryUserDetailsManager(user1);
     }
-
 }
